--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-02-21 Tue 13:56 -->
+<!-- 2017-02-21 Tue 14:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>eliza-cl.org</title>
@@ -233,19 +233,20 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga7ab651">Preface</a></li>
-<li><a href="#orgc079d9a">Introduction</a></li>
-<li><a href="#org8d9dbc6">An Interactive Interpreter</a>
+<li><a href="#orgc5f70b1">Preface</a></li>
+<li><a href="#orge7fb3fe">Introduction</a></li>
+<li><a href="#org46c2a63">Pattern Matching</a>
 <ul>
-<li><a href="#org6b0cf5d">interactive-interpreter</a></li>
+<li><a href="#org3fef662">simple-equal</a></li>
+<li><a href="#org083a7e4">pat-match</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga7ab651" class="outline-2">
-<h2 id="orga7ab651">Preface</h2>
-<div class="outline-text-2" id="text-orga7ab651">
+<div id="outline-container-orgc5f70b1" class="outline-2">
+<h2 id="orgc5f70b1">Preface</h2>
+<div class="outline-text-2" id="text-orgc5f70b1">
 <p>
 <b><b>The computer code here is not original to me.</b></b> and this document reflects several of my ongoing projects:
 </p>
@@ -256,103 +257,39 @@ for the JavaScript code in this tag.
 </ol>
 </div>
 </div>
-<div id="outline-container-orgc079d9a" class="outline-2">
-<h2 id="orgc079d9a">Introduction</h2>
+<div id="outline-container-orge7fb3fe" class="outline-2">
+<h2 id="orge7fb3fe">Introduction</h2>
 </div>
 
-<div id="outline-container-org8d9dbc6" class="outline-2">
-<h2 id="org8d9dbc6">An Interactive Interpreter</h2>
-<div class="outline-text-2" id="text-org8d9dbc6">
-<p>
-Norvig uses Eliza to introduce the read-eval-print loop. The most interesting aspect of my first impression is that the inclusion of <code>flatten</code> makes it just ever so slightly more complex than I would have imagined. 
-</p>
+<div id="outline-container-org46c2a63" class="outline-2">
+<h2 id="org46c2a63">Pattern Matching</h2>
+<div class="outline-text-2" id="text-org46c2a63">
+</div><div id="outline-container-org3fef662" class="outline-3">
+<h3 id="org3fef662">simple-equal</h3>
+<div class="outline-text-3" id="text-org3fef662">
 <div class="org-src-container">
-<pre class="src src-lisp">(defun eliza ()
-  "Respond to user input using pattern matching."
-  (loop
-     (print 'eliza&gt;)
-     (print (flatten (use-eliza-rules (read))))))
+<pre class="src src-lisp">(defun simple-equal (x y)
+  "Are x and y equal. Does not check inside strings."
+  (if (or (atom x) (atom y))
+      (eql x y)
+      (and (simple-equal (first x) (first y))
+           (simple-equal (rest x) (rest y)))))
 </pre>
 </div>
-<p>
-Perhaps that is the result of mixing levels of abstraction: <code>flatten</code> is used to format the output and in that sense is part of the user interface. Norvig's implementation mixes the interface with the business logic. I expected the abstractions to maintain the form <code>(loop (print (eval (read))))</code> more formally.
-</p>
-
-<p>
-But enough quibbling. Norvig's big point is the power of <code>(read)</code> in Lisp. The <code>repl</code> does not require tools to perform lexical analysis and symbol lookup and parsing. There is a class of programs that have the general form:
-</p>
-<pre class="example">
-(defun program()
-  (loop
-    (print &lt;prompt&gt;)
-    (print (transform (read)))))
-</pre>
-<p>
-The flexibility of Lisp allows <code>transform</code> and <code>read</code> to be redefined easily.
-</p>
 </div>
-<div id="outline-container-org6b0cf5d" class="outline-3">
-<h3 id="org6b0cf5d">interactive-interpreter</h3>
-<div class="outline-text-3" id="text-org6b0cf5d">
-<p>
-My first impression of this was that this should return a <code>lambda</code> similar to what might be called 'a factory': e.g. <code>...(lambda()(loop ...))...</code>. I even wrote it that way at first. Norvig's form seems likely to produce cleaner code.
-</p>
-<pre class="example">
-(defun interactive-interpeter (prompt transformer)
-  "Reads an expression, interprets it and returns the result."
-  (loop
-       (print prompt)
-       (print (funcall transformer (read)))))
-</pre>
-<p>
-Returning a <code>lambda</code> means the use is something like:
-</p>
-<pre class="example">
-(setf (symbol-function foo) 
-      (interpreter-factory prompt transform))
-</pre>
-<p>
-While using Norvig's version is cleaner looking because the function definition uses <code>defun</code> and therefore looks like a function definition.
-</p>
-<pre class="example">
-(defun foo ()
-  (interactive-interpreter prompt transform))
-</pre>
-<p>
-Norvig goes on to provide a cleaner version of <code>(eliza())</code> using <code>compose</code> that addresses my earlier gripes about mixed layers of abstraction (and I did not know this when I wrote them).
-</p>
-<pre class="example">
-(defun eliza()
-  (interactive-interpeter 'eliza&gt;
-                          (compose #'flatten #'use-eliza-rules)))
-</pre>
+</div>
+<div id="outline-container-org083a7e4" class="outline-3">
+<h3 id="org083a7e4">pat-match</h3>
+<div class="outline-text-3" id="text-org083a7e4">
 <div class="org-src-container">
-<pre class="src src-lisp">;;; This file autogenerated from eliza-cl.org
-
-&lt;&lt;prompt-generator&gt;&gt;
-
-(defun interactive-interpeter (prompt transformer)
-  "Reads an expression, interprets it and returns the result."
-  (loop
-     (handler-case
-         (progn
-           (if (stringp prompt)
-               (print prompt)
-               (funcall prompt))
-           (print (funcall transformer (read))))
-       ;; in case of error do this
-       (error (condition)
-         (format t "~&amp;:: Error ~a ignored, back to top level."
-                 condition)))))
-</pre>
-</div>
-<p>
-Once again impressed with Norvig's book. It's not enough to show a more robust interpreter. He provides <code>prompt-generator</code> to provide insight and show the mortality of a wizard behind the curtain. It's the mixture of expressiveness at high and low levels that makes Common Lisp intriguing. 
-</p>
-<div class="org-src-container">
-<pre class="src src-lisp" id="org4116107">(defun prompt-generator (&amp;optional (num 0) (ctl-string "[~d] "))
-  "Return a function that prints prompts like [1], [2], etc."
-  #'lambda () (format t clt-string (incf num)))
+<pre class="src src-lisp">(defun pat-match (input pattern)
+  "Does pattern match input? Any variable can match anything."
+  (if (variable-p pattern)
+      t
+      (if (or (atom pattern) (atom input))
+          (eql pattern input)
+          (and (pat-match (first input) (first pattern))
+               (pat-match (rest input) (rest pattern))))))
 </pre>
 </div>
 </div>
@@ -361,7 +298,7 @@ Once again impressed with Norvig's book. It's not enough to show a more robust i
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-02-21 Tue 13:56</p>
+<p class="date">Created: 2017-02-21 Tue 14:41</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
