update to remove chapter 6

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-02-21 Tue 14:41 -->
+<!-- 2017-02-21 Tue 14:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>eliza-cl.org</title>
@@ -233,20 +233,20 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc5f70b1">Preface</a></li>
-<li><a href="#orge7fb3fe">Introduction</a></li>
-<li><a href="#org46c2a63">Pattern Matching</a>
+<li><a href="#orgb0905fd">Preface</a></li>
+<li><a href="#orgb6e5e00">Introduction</a></li>
+<li><a href="#orga6ac021">Pattern Matching</a>
 <ul>
-<li><a href="#org3fef662">simple-equal</a></li>
-<li><a href="#org083a7e4">pat-match</a></li>
+<li><a href="#org92bb2f3">simple-equal</a></li>
+<li><a href="#org3643606">pat-match</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc5f70b1" class="outline-2">
-<h2 id="orgc5f70b1">Preface</h2>
-<div class="outline-text-2" id="text-orgc5f70b1">
+<div id="outline-container-orgb0905fd" class="outline-2">
+<h2 id="orgb0905fd">Preface</h2>
+<div class="outline-text-2" id="text-orgb0905fd">
 <p>
 <b><b>The computer code here is not original to me.</b></b> and this document reflects several of my ongoing projects:
 </p>
@@ -257,16 +257,16 @@ for the JavaScript code in this tag.
 </ol>
 </div>
 </div>
-<div id="outline-container-orge7fb3fe" class="outline-2">
-<h2 id="orge7fb3fe">Introduction</h2>
+<div id="outline-container-orgb6e5e00" class="outline-2">
+<h2 id="orgb6e5e00">Introduction</h2>
 </div>
 
-<div id="outline-container-org46c2a63" class="outline-2">
-<h2 id="org46c2a63">Pattern Matching</h2>
-<div class="outline-text-2" id="text-org46c2a63">
-</div><div id="outline-container-org3fef662" class="outline-3">
-<h3 id="org3fef662">simple-equal</h3>
-<div class="outline-text-3" id="text-org3fef662">
+<div id="outline-container-orga6ac021" class="outline-2">
+<h2 id="orga6ac021">Pattern Matching</h2>
+<div class="outline-text-2" id="text-orga6ac021">
+</div><div id="outline-container-org92bb2f3" class="outline-3">
+<h3 id="org92bb2f3">simple-equal</h3>
+<div class="outline-text-3" id="text-org92bb2f3">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun simple-equal (x y)
   "Are x and y equal. Does not check inside strings."
@@ -278,9 +278,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-org083a7e4" class="outline-3">
-<h3 id="org083a7e4">pat-match</h3>
-<div class="outline-text-3" id="text-org083a7e4">
+<div id="outline-container-org3643606" class="outline-3">
+<h3 id="org3643606">pat-match</h3>
+<div class="outline-text-3" id="text-org3643606">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun pat-match (input pattern)
   "Does pattern match input? Any variable can match anything."
@@ -298,7 +298,7 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-02-21 Tue 14:41</p>
+<p class="date">Created: 2017-02-21 Tue 14:53</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
