--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-02-21 Tue 14:53 -->
+<!-- 2017-02-23 Thu 16:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>eliza-cl.org</title>
@@ -233,20 +233,27 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb0905fd">Preface</a></li>
-<li><a href="#orgb6e5e00">Introduction</a></li>
-<li><a href="#orga6ac021">Pattern Matching</a>
+<li><a href="#org1986613">Preface</a></li>
+<li><a href="#org956042e">Introduction</a></li>
+<li><a href="#org11e6e81">Pattern Matching</a>
 <ul>
-<li><a href="#org92bb2f3">simple-equal</a></li>
-<li><a href="#org3643606">pat-match</a></li>
+<li><a href="#org273cf55">simple-equal</a></li>
+<li><a href="#org1f54e8d">pat-match</a>
+<ul>
+<li><a href="#org980e36d">A naive version</a></li>
+<li><a href="#org6ffd9af">A second buggy version</a></li>
+<li><a href="#org24d3242">A third version</a></li>
+</ul>
+</li>
+<li><a href="#orgb300bc4">variable-p</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb0905fd" class="outline-2">
-<h2 id="orgb0905fd">Preface</h2>
-<div class="outline-text-2" id="text-orgb0905fd">
+<div id="outline-container-org1986613" class="outline-2">
+<h2 id="org1986613">Preface</h2>
+<div class="outline-text-2" id="text-org1986613">
 <p>
 <b><b>The computer code here is not original to me.</b></b> and this document reflects several of my ongoing projects:
 </p>
@@ -257,16 +264,16 @@ for the JavaScript code in this tag.
 </ol>
 </div>
 </div>
-<div id="outline-container-orgb6e5e00" class="outline-2">
-<h2 id="orgb6e5e00">Introduction</h2>
+<div id="outline-container-org956042e" class="outline-2">
+<h2 id="org956042e">Introduction</h2>
 </div>
 
-<div id="outline-container-orga6ac021" class="outline-2">
-<h2 id="orga6ac021">Pattern Matching</h2>
-<div class="outline-text-2" id="text-orga6ac021">
-</div><div id="outline-container-org92bb2f3" class="outline-3">
-<h3 id="org92bb2f3">simple-equal</h3>
-<div class="outline-text-3" id="text-org92bb2f3">
+<div id="outline-container-org11e6e81" class="outline-2">
+<h2 id="org11e6e81">Pattern Matching</h2>
+<div class="outline-text-2" id="text-org11e6e81">
+</div><div id="outline-container-org273cf55" class="outline-3">
+<h3 id="org273cf55">simple-equal</h3>
+<div class="outline-text-3" id="text-org273cf55">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun simple-equal (x y)
   "Are x and y equal. Does not check inside strings."
@@ -278,9 +285,16 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-org3643606" class="outline-3">
-<h3 id="org3643606">pat-match</h3>
-<div class="outline-text-3" id="text-org3643606">
+<div id="outline-container-org1f54e8d" class="outline-3">
+<h3 id="org1f54e8d">pat-match</h3>
+<div class="outline-text-3" id="text-org1f54e8d">
+<p>
+The naive version is so straight forward it could be template code for recursing on a list (or two lists). There is a certain concision to the first part which avoids enumerating all the cases of atoms and lists. Though it arises more from the template style than anything else. 
+</p>
+</div>
+<div id="outline-container-org980e36d" class="outline-4">
+<h4 id="org980e36d">A naive version</h4>
+<div class="outline-text-4" id="text-org980e36d">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun pat-match (input pattern)
   "Does pattern match input? Any variable can match anything."
@@ -294,11 +308,134 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
+<div id="outline-container-org6ffd9af" class="outline-4">
+<h4 id="org6ffd9af">A second buggy version</h4>
+<div class="outline-text-4" id="text-org6ffd9af">
+<p>
+One problem is that <code>(eql pattern input)</code> may return <code>t</code>. While <code>nil</code> is not a problem for <code>append</code>, <code>t</code> is&#x2026;since <code>t</code> is not a list. Booleans are actually tough if they're overloaded as they are many languages.
+</p>
+
+<p>
+The second problem is semi-boolean contexts: those in which <code>nil</code> may be returned from a successful match versus where <code>nil</code> is returned because a predicate turned out to be false. Did I say booleans are tough?
+</p>
+
+<p>
+The final problem is that we want the same variable (e.g. <code>?X</code>) to consistently be bound to the same expression when it appears multiple times in an input.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(defun pat-match (pattern input)
+  "BUGGY Second version."
+  (if (variable-p pattern)
+      (list (cons pattern input))
+      (if (or (atom pattern) (atom input))
+          (eql pattern input)
+          (append (pat-match (first pattern) (first input))
+                  (pat-match (rest pattern) (rest input))))))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org24d3242" class="outline-4">
+<h4 id="org24d3242">A third version</h4>
+<div class="outline-text-4" id="text-org24d3242">
+<p>
+The first step in the third version is to turn <code>pat-match</code> into a true predicate that only returns <code>nil</code> for failure. It's worth noting that only having a single value that indicates <code>false</code> is helpful here.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org3eeffe0">(defconstant fail nil "indicates pat-match failure.")
+
+(defconstant no-bindings '(t . t)
+  "Indicates a pattern match success, with no variables.")
+</pre>
+</div>
+<p>
+Building abstractions over <code>assoc</code> enables using the language of variables and bindings rather than low level lisp.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgc4adc33">(defun get-bindings (var bindings)
+  "Find a (variable . value) pair in a binding list."
+  (assoc var bindings))
+
+(defun binding-val (binding)
+  "Get the value part of a single binding."
+  (cdr binding))
+
+(defun lookup (var bindings)
+  "Get the value part (for var) from a binding list."
+  (binding-val (get-bindings var bindings)))
+
+(defun extend-bindings (var val bindings)
+  "Add a (var . value) pair to a binding list."
+  (cons (cons var val) bindings))
+</pre>
+</div>
+<p>
+There are five cases for <code>pat-match</code>:
+</p>
+<ol class="org-ol">
+<li>Bindings list is <code>fail</code> and the match fails.</li>
+<li>Pattern is a single variable.</li>
+<li>Pattern and input are <code>eql</code>.</li>
+<li>Pattern and input are both lists.</li>
+<li>None of these holds and the match fails.</li>
+</ol>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org3323264">&lt;&lt;pat-match-constants&gt;&gt;
+
+&lt;&lt;binding-utilities&gt;&gt;
+
+&lt;&lt;match-variable&gt;&gt;
+
+(defun pat-match (pattern input &amp;optional (bindings non-bindings))
+  "Match pattern against input in the context of bindings."
+  (cond ((eq bindings fail) fail)
+        ((variable-p pattern)
+         (match-variable pattern input bindings))
+        ((eql pattern input) bindings)
+        ((and (consp pattern)
+              (consp input))
+         (pat-match (rest pattern)
+                    (rest input)
+                    (pat-match (first pattern)
+                               (first input)
+                               bindings)))
+        (t fail)))
+</pre>
+</div>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org7dc0e56">(defun match-variable (var input bindings)
+  "Does var match input. Uses bindings. Returns bindings with or without an update depending on match."
+  (let ((binding (get-binding var bindings)))
+    (cond ((not binding) (extend-bindings var input bindings))
+          ((equal input (binding-val binding)) bindings)
+          (t fail))))
+</pre>
+</div>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orgb300bc4" class="outline-3">
+<h3 id="orgb300bc4">variable-p</h3>
+<div class="outline-text-3" id="text-orgb300bc4">
+<p>
+This function brings up two interesting aspects of Common Lisp. The first is that <code>atom</code>'s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(defun variable-p (x)
+  "Is x a variable where a variable is a symbol beginning with '?'"
+  (and (symbolp x)
+       (equal (char (symbol-name x) 0)
+              #\?)))
+</pre>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-02-21 Tue 14:53</p>
+<p class="date">Created: 2017-02-23 Thu 16:01</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
