--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-02-23 Thu 16:01 -->
+<!-- 2017-02-26 Sun 13:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>eliza-cl.org</title>
@@ -233,27 +233,29 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1986613">Preface</a></li>
-<li><a href="#org956042e">Introduction</a></li>
-<li><a href="#org11e6e81">Pattern Matching</a>
+<li><a href="#orgcfdda1a">Preface</a></li>
+<li><a href="#org8eb4973">Introduction</a></li>
+<li><a href="#orgbacbf05">Pattern Matching</a>
 <ul>
-<li><a href="#org273cf55">simple-equal</a></li>
-<li><a href="#org1f54e8d">pat-match</a>
+<li><a href="#orgd563c9c">simple-equal</a></li>
+<li><a href="#org58e6a5a">variable-p</a></li>
+<li><a href="#org090400d">pat-match</a>
 <ul>
-<li><a href="#org980e36d">A naive version</a></li>
-<li><a href="#org6ffd9af">A second buggy version</a></li>
-<li><a href="#org24d3242">A third version</a></li>
+<li><a href="#org5a21230">A naive version</a></li>
+<li><a href="#org0da23f0">A second buggy version</a></li>
+<li><a href="#org43c11af">A third version</a></li>
+<li><a href="#orgd163740">Segment Pattern Matching</a></li>
+<li><a href="#orgde0fe1c">Final</a></li>
 </ul>
 </li>
-<li><a href="#orgb300bc4">variable-p</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1986613" class="outline-2">
-<h2 id="org1986613">Preface</h2>
-<div class="outline-text-2" id="text-org1986613">
+<div id="outline-container-orgcfdda1a" class="outline-2">
+<h2 id="orgcfdda1a">Preface</h2>
+<div class="outline-text-2" id="text-orgcfdda1a">
 <p>
 <b><b>The computer code here is not original to me.</b></b> and this document reflects several of my ongoing projects:
 </p>
@@ -264,16 +266,16 @@ for the JavaScript code in this tag.
 </ol>
 </div>
 </div>
-<div id="outline-container-org956042e" class="outline-2">
-<h2 id="org956042e">Introduction</h2>
+<div id="outline-container-org8eb4973" class="outline-2">
+<h2 id="org8eb4973">Introduction</h2>
 </div>
 
-<div id="outline-container-org11e6e81" class="outline-2">
-<h2 id="org11e6e81">Pattern Matching</h2>
-<div class="outline-text-2" id="text-org11e6e81">
-</div><div id="outline-container-org273cf55" class="outline-3">
-<h3 id="org273cf55">simple-equal</h3>
-<div class="outline-text-3" id="text-org273cf55">
+<div id="outline-container-orgbacbf05" class="outline-2">
+<h2 id="orgbacbf05">Pattern Matching</h2>
+<div class="outline-text-2" id="text-orgbacbf05">
+</div><div id="outline-container-orgd563c9c" class="outline-3">
+<h3 id="orgd563c9c">simple-equal</h3>
+<div class="outline-text-3" id="text-orgd563c9c">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun simple-equal (x y)
   "Are x and y equal. Does not check inside strings."
@@ -285,16 +287,33 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-org1f54e8d" class="outline-3">
-<h3 id="org1f54e8d">pat-match</h3>
-<div class="outline-text-3" id="text-org1f54e8d">
+
+<div id="outline-container-org58e6a5a" class="outline-3">
+<h3 id="org58e6a5a">variable-p</h3>
+<div class="outline-text-3" id="text-org58e6a5a">
+<p>
+This function brings up two interesting aspects of Common Lisp. The first is that <code>atom</code>'s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org4941823">(defun variable-p (x)
+  "Is x a variable where a variable is a symbol beginning with '?'"
+  (and (symbolp x)
+       (equal (char (symbol-name x) 0)
+              #\?)))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org090400d" class="outline-3">
+<h3 id="org090400d">pat-match</h3>
+<div class="outline-text-3" id="text-org090400d">
 <p>
 The naive version is so straight forward it could be template code for recursing on a list (or two lists). There is a certain concision to the first part which avoids enumerating all the cases of atoms and lists. Though it arises more from the template style than anything else. 
 </p>
 </div>
-<div id="outline-container-org980e36d" class="outline-4">
-<h4 id="org980e36d">A naive version</h4>
-<div class="outline-text-4" id="text-org980e36d">
+<div id="outline-container-org5a21230" class="outline-4">
+<h4 id="org5a21230">A naive version</h4>
+<div class="outline-text-4" id="text-org5a21230">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun pat-match (input pattern)
   "Does pattern match input? Any variable can match anything."
@@ -308,9 +327,9 @@ The naive version is so straight forward it could be template code for recursing
 </div>
 </div>
 </div>
-<div id="outline-container-org6ffd9af" class="outline-4">
-<h4 id="org6ffd9af">A second buggy version</h4>
-<div class="outline-text-4" id="text-org6ffd9af">
+<div id="outline-container-org0da23f0" class="outline-4">
+<h4 id="org0da23f0">A second buggy version</h4>
+<div class="outline-text-4" id="text-org0da23f0">
 <p>
 One problem is that <code>(eql pattern input)</code> may return <code>t</code>. While <code>nil</code> is not a problem for <code>append</code>, <code>t</code> is&#x2026;since <code>t</code> is not a list. Booleans are actually tough if they're overloaded as they are many languages.
 </p>
@@ -335,14 +354,14 @@ The final problem is that we want the same variable (e.g. <code>?X</code>) to co
 </div>
 </div>
 </div>
-<div id="outline-container-org24d3242" class="outline-4">
-<h4 id="org24d3242">A third version</h4>
-<div class="outline-text-4" id="text-org24d3242">
+<div id="outline-container-org43c11af" class="outline-4">
+<h4 id="org43c11af">A third version</h4>
+<div class="outline-text-4" id="text-org43c11af">
 <p>
 The first step in the third version is to turn <code>pat-match</code> into a true predicate that only returns <code>nil</code> for failure. It's worth noting that only having a single value that indicates <code>false</code> is helpful here.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org3eeffe0">(defconstant fail nil "indicates pat-match failure.")
+<pre class="src src-lisp" id="org25a3886">(defconstant fail nil "indicates pat-match failure.")
 
 (defconstant no-bindings '(t . t)
   "Indicates a pattern match success, with no variables.")
@@ -352,7 +371,7 @@ The first step in the third version is to turn <code>pat-match</code> into a tru
 Building abstractions over <code>assoc</code> enables using the language of variables and bindings rather than low level lisp.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="orgc4adc33">(defun get-bindings (var bindings)
+<pre class="src src-lisp" id="orgbdda23a">(defun get-bindings (var bindings)
   "Find a (variable . value) pair in a binding list."
   (assoc var bindings))
 
@@ -380,13 +399,7 @@ There are five cases for <code>pat-match</code>:
 <li>None of these holds and the match fails.</li>
 </ol>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org3323264">&lt;&lt;pat-match-constants&gt;&gt;
-
-&lt;&lt;binding-utilities&gt;&gt;
-
-&lt;&lt;match-variable&gt;&gt;
-
-(defun pat-match (pattern input &amp;optional (bindings non-bindings))
+<pre class="src src-lisp">(defun pat-match (pattern input &amp;optional (bindings non-bindings))
   "Match pattern against input in the context of bindings."
   (cond ((eq bindings fail) fail)
         ((variable-p pattern)
@@ -403,7 +416,7 @@ There are five cases for <code>pat-match</code>:
 </pre>
 </div>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org7dc0e56">(defun match-variable (var input bindings)
+<pre class="src src-lisp" id="orga0b9a8b">(defun match-variable (var input bindings)
   "Does var match input. Uses bindings. Returns bindings with or without an update depending on match."
   (let ((binding (get-binding var bindings)))
     (cond ((not binding) (extend-bindings var input bindings))
@@ -413,21 +426,95 @@ There are five cases for <code>pat-match</code>:
 </div>
 </div>
 </div>
-</div>
-
-<div id="outline-container-orgb300bc4" class="outline-3">
-<h3 id="orgb300bc4">variable-p</h3>
-<div class="outline-text-3" id="text-orgb300bc4">
+<div id="outline-container-orgd163740" class="outline-4">
+<h4 id="orgd163740">Segment Pattern Matching</h4>
+<div class="outline-text-4" id="text-orgd163740">
 <p>
-This function brings up two interesting aspects of Common Lisp. The first is that <code>atom</code>'s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
+It is useful to have two types of variables, those that match individual input elements and others that behave like Lisp's <code>&amp;rest</code> parameter. The latter can be thought of as matching segments. This would allow a syntax such as <code>(?P need . ?X)</code>.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp">(defun variable-p (x)
-  "Is x a variable where a variable is a symbol beginning with '?'"
-  (and (symbolp x)
-       (equal (char (symbol-name x) 0)
-              #\?)))
+<pre class="src src-lisp">;;; Example
+(pat-match '((?* ?p) need (?* ?x))
+           '(Mr Hulot and I need a vaction))
+((?P MR HULOT AND I) (?X A VACTION))
 </pre>
+</div>
+<p>
+Updating <code>pat-match</code> for the new behavior:
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(defun pat-match (pattern input &amp;optional (bindings no-bindings))
+  "Match pattern against input in context of the bindings."
+  (cond ((eq bindings fail) fail)
+        ((variable-p pattern)
+         (match-variable pattern input bindings))
+        ((eql pattern input) bindings)
+        ((segment-pattern-p pattern)
+         (segment-match pattern input bindings))
+        ((and (consp pattern) (consp input))
+         (pat-match (rest pattern)
+                    (rest input)
+                    (pat-match (first pattern)
+                               (first input)
+                               bindings)))
+        (t fail)))
+</pre>
+</div>
+<p>
+Adding the new predicate highlights Common Lisp's flexibility in regards to naming symbols by allowing a notation evocative of the kleene star.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org346fd4b">(defun segment-pattern-p (pattern)
+  "Is this a segment matching pattern: ((?* var) . pat)"
+  (and (consp pattern)
+       (starts-with (first-pattern) '?*)))
+</pre>
+</div>
+<p>
+The first pass at <code>segment-match</code> address the problems that arise when the next element of the pattern is contained in the input but there are intervening elements between what has been matched already and the match for the next element of the pattern. It allows looking further ahead in the input at the expense of requiring a segment-variable to be the last variable in a pattern.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(defun segment-match (pattern input bindings &amp;optional (start 0))
+  "Match the segment patter ((?* var) . pat) against input."
+  (let ((var (second (first pattern)))
+        (pat (rest pattern)))
+    (if (null pat)
+        (match-variable var input bindings)
+        ;; We assume pat starts with a constant
+        ;; In other words, a pattern can't have 2 consectutive vars
+        (let ((pos (position (first pat)
+                             input
+                             :start start
+                             :test #'equal)))
+          (if (null pos)
+              fail
+              (let ((b2 (pat-match (subseq input pos)
+                                   bindings)))
+                ;; If this match failed try another longer one
+                ;; If it worked, check that the variables match
+                (if (eq b2 fail)
+                    (segment-match pattern input bindings (+ 1 pos))
+                    (match-variable var
+                                    (subseq input 0 pos)
+                                    b2))))))))
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orgde0fe1c" class="outline-4">
+<h4 id="orgde0fe1c">Final</h4>
+<div class="outline-text-4" id="text-orgde0fe1c">
+<div class="org-src-container">
+<pre class="src src-lisp" id="org9f9512b">&lt;&lt;pat-match-constants&gt;&gt;
+
+&lt;&lt;binding-utilities&gt;&gt;
+
+&lt;&lt;variable-p&gt;&gt;
+
+&lt;&lt;match-variable&gt;&gt;
+</pre>
+</div>
 </div>
 </div>
 </div>
@@ -435,7 +522,7 @@ This function brings up two interesting aspects of Common Lisp. The first is tha
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-02-23 Thu 16:01</p>
+<p class="date">Created: 2017-02-26 Sun 13:52</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
